--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "homepage": "https://github.com/fuaditrockz/dkatalis#readme",
   "dependencies": {
-    "linebyline": "^1.3.0",
+    "cli-color": "^2.0.3",
     "nodemon": "^2.0.20"
   },
   "devDependencies": {
