--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
     "start": "npm run build && ts-node dist/index",
-    "test": "TERM=dumb jest --watch"
+    "test": "jest --watch"
   },
   "repository": {
     "type": "git",
