--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "ts-node index",
+    "start": "ts-node index.ts",
     "test": "jest --watch",
     "coverage": "jest --coverage"
   },
@@ -21,12 +21,14 @@
   "homepage": "https://github.com/fuaditrockz/dkatalis#readme",
   "dependencies": {
     "cli-color": "^2.0.3",
-    "nodemon": "^2.0.20"
+    "ramda": "^0.28.0"
   },
   "devDependencies": {
+    "nodemon": "^2.0.20",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
     "@types/jest": "^29.2.2",
+    "@types/ramda": "^0.28.19",
     "babel-cli": "^6.26.0",
     "babel-preset-es2016": "^6.24.1",
     "jest": "^29.3.0",
