--- a/package.json
+++ b/package.json
@@ -21,17 +21,20 @@
   "homepage": "https://github.com/fuaditrockz/dkatalis#readme",
   "dependencies": {
     "cli-color": "^2.0.3",
+    "fakerator": "^0.3.6",
+    "lodash": "^4.17.21",
     "ramda": "^0.28.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
     "@types/jest": "^29.2.2",
+    "@types/lodash": "^4.14.189",
     "@types/ramda": "^0.28.19",
     "babel-cli": "^6.26.0",
     "babel-preset-es2016": "^6.24.1",
     "jest": "^29.3.0",
+    "nodemon": "^2.0.20",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
