--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/fuaditrockz/dkatalis#readme",
   "dependencies": {
     "cli-color": "^2.0.3",
+    "cli-table": "^0.3.11",
     "fakerator": "^0.3.6",
     "lodash": "^4.17.21",
     "ramda": "^0.28.0"
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/cli-table": "^0.3.1",
     "@types/jest": "^29.2.2",
     "@types/lodash": "^4.14.189",
     "@types/ramda": "^0.28.19",
